--- a/crowdin.properties
+++ b/crowdin.properties
@@ -28,6 +28,14 @@ ks-2.2.x/=ks-2.2.x.properties
 #
 social-1.2.x/=soc-1.2.x.properties
 #
+# Commons
+#
+commons-1.1.x/=commons-1.1.x.properties
+#
+# Integration
+#
+integration-1.0.x/=integration-1.0.x.properties
+#
 # Portal / GateIn
 #
 exogtn-3.2.x/=exogtn-3.2.x.properties
