--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   <properties>
     <exo.crowdin.properties>crowdin.properties</exo.crowdin.properties>
     <!-- exo.crowdin.project.id and exo.crowdin.project.key are set in settings.xml -->
+    <exo.crowdin.upload-translation.properties>upload-translation/upload-translation.properties</exo.crowdin.upload-translation.properties>
   </properties>
   
   <profiles>
@@ -72,6 +73,7 @@
         </plugins>
       </build>
     </profile>
+    
     <profile>
       <id>sync</id>
       <build>
@@ -124,6 +126,7 @@
         </plugins>
       </build>
     </profile>
+    
     <profile>
       <id>update</id>
       <build>
@@ -176,5 +179,59 @@
         </plugins>
       </build>
     </profile>
+    
+    <profile>
+      <id>upload-translation</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>init</id>
+                <phase>initialize</phase>
+                <configuration>
+                  <executable>${basedir}/scripts/init-prepare.sh</executable>
+                  <workingDirectory>${exo.projects.directory.base}/eXoProjects/</workingDirectory>
+                </configuration>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>post-process</id>
+                <phase>package</phase>
+                <configuration>
+                  <executable>${basedir}/scripts/post-process.sh</executable>
+                  <workingDirectory>${exo.projects.directory.base}/eXoProjects/</workingDirectory>
+                </configuration>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+             <groupId>org.exoplatform.crowdin</groupId>
+             <artifactId>crowdin-maven-plugin</artifactId>
+             <version>1.0.0-SNAPSHOT</version>
+             <executions>
+               <execution>
+                 <id>upload-translation</id>
+                 <phase>compile</phase>
+                 <goals>
+                   <goal>upload-translation</goal>
+                 </goals>
+                 <configuration>
+                   <startDir>${exo.projects.directory.base}/eXoProjects/</startDir>
+                 </configuration>
+               </execution>
+             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    
   </profiles>
 </project>
