--- a/pom.xml
+++ b/pom.xml
@@ -132,31 +132,14 @@
       <build>
         <plugins>
           <plugin>
-             <groupId>org.exoplatform.crowdin</groupId>
-             <artifactId>crowdin-maven-plugin</artifactId>
-             <version>1.0.0-SNAPSHOT</version>
-             <executions>
-               <execution>
-                 <id>update</id>
-                 <phase>compile</phase>
-                 <goals>
-                   <goal>update</goal>
-                 </goals>
-                 <configuration>
-                   <startDir>${basedir}/eXoProjects/</startDir>
-                 </configuration>
-               </execution>
-             </executions>
-          </plugin>
-          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <executions>
               <execution>
                 <id>update</id>
-                <phase>package</phase>
+                <phase>initialize</phase>
                 <configuration>
-                  <executable>${basedir}/scripts/update.sh</executable>
+                  <executable>${basedir}/scripts/init-prepare.sh</executable>
                   <workingDirectory>${basedir}/eXoProjects/</workingDirectory>
                 </configuration>
                 <goals>
@@ -175,6 +158,23 @@
                 </goals>
               </execution>
             </executions>
+          </plugin>
+          <plugin>
+             <groupId>org.exoplatform.crowdin</groupId>
+             <artifactId>crowdin-maven-plugin</artifactId>
+             <version>1.0.0-SNAPSHOT</version>
+             <executions>
+               <execution>
+                 <id>update</id>
+                 <phase>compile</phase>
+                 <goals>
+                   <goal>update</goal>
+                 </goals>
+                 <configuration>
+                   <startDir>${basedir}/eXoProjects/</startDir>
+                 </configuration>
+               </execution>
+             </executions>
           </plugin>
         </plugins>
       </build>
